added Chapter 1 intro some changes to TOC

--- a/templates/READMEs/README_main.tex
+++ b/templates/READMEs/README_main.tex
@@ -38,6 +38,11 @@
 %% \include{contents}
 %% \include{chap1}
 %% \include{chap2}
+%% \include{chap3}
+%% \include{chap4}
+%% \include{chap5}
+%% \include{chap6}
+%% \include{chap7}
 %% \appendix
 %% \include{appa}
 %% \include{appb}
