--- a/templates/chap1.tex
+++ b/templates/chap1.tex
@@ -4,13 +4,29 @@
 %% You can process specific files by typing their names in at the 
 %% \files=
 %% prompt when you run the file main.tex through LaTeX.
-\chapter{Introduction}
+\chapter{Introduction}\label{ch1:intro}
+The pursuit of energy has shaped the story of mankind from the very beginning. And while the image of ancient humans using fires for warmth, protection, and meal preparation is an archetype of our distant past, modern human needs remain much the same. Lighting to extend day into night, heating and cooling for comfort in our homes, cooking of the food we eat, access to the advanced technologies of our time – these all require energy from one source or another.  Choices abound, from animal and plant-based fuels, to buried resources like various forms of hydrocarbons, to alternatives like solar, wind, hydro, nuclear, and geothermal. How these sources and resources are balanced can shape the growth of societies on the geopolitical stage, as well as grander scale impacts like the future of a habitable Earth and the perseverance and resilience of mankind.
 
-Lorem ipsum dolor sit amet, consectetur adipiscing elit. Aliquam quis sollicitudin metus. Quisque quam ex, tincidunt et porttitor quis, tincidunt faucibus quam. Nulla facilisi. Nam a libero posuere, mattis leo ac, ultrices est. Nullam auctor lacus eu metus venenatis, gravida consectetur felis laoreet. Nam non ante felis. Maecenas id dignissim turpis, eget pulvinar nisl. Cras nec mauris feugiat, aliquam elit ac, blandit ex \cite{article-full}.
+This thesis examines how uncertainty characterization and risk mitigation can increase the role of one source, geothermal, in addressing the ever-growing energy needs in a viable way. This chapter reflects on the extent of those needs and the conditions that may uniquely support an increased focus on geothermal in the near-term. Opportunities and challenges associated with geothermal also lay the foundation for research questions motivating the remainder of this body of work.
+
+
+\section{Trends in Energy Usage}\label{ch1:trends}
+
+ \cite{article-full}.
 
 Nunc vehicula velit nibh, ut facilisis magna blandit semper. Fusce varius odio in velit mattis porttitor. Vivamus aliquam vulputate quam, non auctor augue ornare ut. Vivamus ac pretium sapien, sed gravida elit. Etiam facilisis risus libero, sed vulputate velit lobortis sed. Aliquam erat volutpat. Sed est orci, dignissim nec varius et, auctor non purus \cite{proceedings-minimal,phdthesis-full}. Morbi feugiat gravida ipsum. Sed maximus nibh eget feugiat tempor. Pellentesque nec urna varius, volutpat dolor at, mattis leo. Vivamus elit eros, pretium sed magna nec, faucibus egestas enim. Vivamus ipsum ex, condimentum eu felis ac, tempus feugiat metus discussed in section~\ref{ch1:sec}.
 
-\section{Section sample 1}
+\section{Upstream Commercial Pressures}\label{ch1:upstream}
+
+
+\section{Net Zero Ambitions}\label{ch1:netzero}
+
+
+\section{Geothermal Energy}\label{ch1:geothermal}
+
+\section{Research Questions}\label{ch1:researchqs}
+
+
 
 Ut hendrerit risus egestas, sollicitudin mauris sit amet, fermentum ipsum. Donec vulputate enim in justo pellentesque rhoncus. Nunc a dui condimentum, egestas ipsum eu, fermentum enim. Duis condimentum iaculis luctus. Nam sodales pellentesque luctus. Aenean tristique ante mattis tellus tincidunt, vitae mattis nunc tristique. Ut nec mattis ante, eu sodales ex.
 
