--- a/templates/contents.tex
+++ b/templates/contents.tex
@@ -3,9 +3,12 @@
 %% contents and lists of figures and tables.  You can omit any or all of
 %% these files by simply taking out the appropriate command.  For more
 %% information on these files, see appendix C.3.3 of the LaTeX manual. 
-\tableofcontents
-\newpage
-\listoffigures
-\newpage
-\listoftables
 
+{\hypersetup{linkcolor=black}\tableofcontents}
+\cleardoublepage
+\addcontentsline{toc}{chapter}{\listfigurename}
+{\hypersetup{linkcolor=black}\listoffigures}
+\clearpage
+\addcontentsline{toc}{chapter}{\listtablename}
+{\hypersetup{linkcolor=black}\listoftables}
+\clearpage
