--- a/templates/acronyms.tex
+++ b/templates/acronyms.tex
@@ -1,7 +1,7 @@
 \section*{Table of Acronyms}
-\newacronym{gcd}{GCD}{Greatest Common Divisor}
-\newacronym{lcm}{LCM}{Least Common Multiple}
-
-\gls{gcd} is fun like \gls{lcm}
+\newacronym{aeo}{AEO}{Annual Energy Outlook}
+\newacronym{eia}{EIA}{United States Energy Information Administration}
+\newacronym{ieo}{IEO}{International Energy Outlook}
 
 \printglossary[title=List of Acronyms, toctitle=List of Acronyms, type=\acronymtype]
+\cleardoublepage
