--- a/templates/chap1.tex
+++ b/templates/chap1.tex
@@ -11,6 +11,7 @@ This thesis examines how uncertainty characterization and risk mitigation can in
 
 
 \section{Trends in Energy Usage}\label{ch1:trends}
+The \acrlong{eia} publishes annual forecasts on U.S. energy generation and consumption in the \acrlong{aeo} report. Based on the 2020 reference case, the \acrshort{aeo} model predicts a 50\% increase in U.S. energy consumption by 2050 (Figure 1) and decreasing electricity generation in all sectors except renewables (US Energy Information Administration, 2021). The companion \acrlong{ieo} shows similar increases in energy demand and renewables consumption, although more traditional sources of energy like coal, natural gas, petroleum, and nuclear also grow to meet the needs of India, China, and other rapidly developing nations (US Energy Information Administration, 2020). A deeper look into the 2020 reference case shows solar and wind-based energy generation as the primary drivers in renewables, while geothermal contributions are relatively minor by comparison (Figure 1). 
 
  \cite{article-full}.
 
