--- a/templates/contents.tex
+++ b/templates/contents.tex
@@ -8,7 +8,7 @@
 \cleardoublepage
 \addcontentsline{toc}{chapter}{\listfigurename}
 {\hypersetup{linkcolor=black}\listoffigures}
-\clearpage
+\cleardoublepage
 \addcontentsline{toc}{chapter}{\listtablename}
 {\hypersetup{linkcolor=black}\listoftables}
-\clearpage
+\cleardoublepage
