fixed acronym list, inserted first figure, beginning work on section 1.1

--- a/templates/biblio.tex
+++ b/templates/biblio.tex
@@ -4,5 +4,7 @@
 %% see section 4.3 of the LaTeX manual.
 \begin{singlespace}
 \bibliography{main}
-\bibliographystyle{plain}
+
+%% APA citation
+\bibliographystyle{apacite}
 \end{singlespace}
