--- a/templates/chap1.tex
+++ b/templates/chap1.tex
@@ -9,13 +9,16 @@ The pursuit of energy has shaped the story of mankind from the very beginning. A
 
 This thesis examines how uncertainty characterization and risk mitigation can increase the role of one source, geothermal, in addressing the ever-growing energy needs in a viable way. This chapter reflects on the extent of those needs and the conditions that may uniquely support an increased focus on geothermal in the near-term. Opportunities and challenges associated with geothermal also lay the foundation for research questions motivating the remainder of this body of work.
 
-
 \section{Trends in Energy Usage}\label{ch1:trends}
-The \acrlong{eia} publishes annual forecasts on U.S. energy generation and consumption in the \acrlong{aeo} report. Based on the 2020 reference case, the \acrshort{aeo} model predicts a 50\% increase in U.S. energy consumption by 2050 (Figure 1) and decreasing electricity generation in all sectors except renewables (US Energy Information Administration, 2021). The companion \acrlong{ieo} shows similar increases in energy demand and renewables consumption, although more traditional sources of energy like coal, natural gas, petroleum, and nuclear also grow to meet the needs of India, China, and other rapidly developing nations (US Energy Information Administration, 2020). A deeper look into the 2020 reference case shows solar and wind-based energy generation as the primary drivers in renewables, while geothermal contributions are relatively minor by comparison (Figure 1). 
+The \acrlong{eia} publishes annual forecasts on U.S. energy generation and consumption in the \acrlong{aeo} report. Based on the 2020 reference case, the \acrshort{aeo} model predicts a 50\% increase in U.S. energy consumption by 2050 (Figure \ref{fig:eia_2021_projections}) and decreasing electricity generation in all sectors except renewables \citep{us_energy_information_administration_annual_2021}. The \acrlong{ieo} shows similar increases in energy demand and renewables consumption, although more traditional sources of energy like coal, natural gas, petroleum, and nuclear also grow to meet the needs of India, China, and other rapidly developing nations \citep{us_energy_information_administration_international_2020}. A deeper look into the 2020 reference case shows solar and wind-based energy generation as the primary drivers in renewables, while geothermal contributions are relatively minor by comparison (Figure \ref{fig:eia_2021_projections}). 
+\begin{figure}[htp]
+\centering
+\includegraphics[scale=0.45]{Figure001-EIA_projections}
+\caption[U.S. EIA projections based on the AEO2020 reference case]{U.S. EIA projections of (Left) U.S. electricity generation by sector and (Right) individual contributions by renewable type based on the AEO2020 reference case \protect\citep{us_energy_information_administration_annual_2021}}
+\label{fig:eia_2021_projections}
+\end{figure}
 
- \cite{article-full}.
-
-Nunc vehicula velit nibh, ut facilisis magna blandit semper. Fusce varius odio in velit mattis porttitor. Vivamus aliquam vulputate quam, non auctor augue ornare ut. Vivamus ac pretium sapien, sed gravida elit. Etiam facilisis risus libero, sed vulputate velit lobortis sed. Aliquam erat volutpat. Sed est orci, dignissim nec varius et, auctor non purus \cite{proceedings-minimal,phdthesis-full}. Morbi feugiat gravida ipsum. Sed maximus nibh eget feugiat tempor. Pellentesque nec urna varius, volutpat dolor at, mattis leo. Vivamus elit eros, pretium sed magna nec, faucibus egestas enim. Vivamus ipsum ex, condimentum eu felis ac, tempus feugiat metus discussed in section~\ref{ch1:sec}.
+%section~\ref{ch1:sec}.
 
 \section{Upstream Commercial Pressures}\label{ch1:upstream}
 
@@ -28,25 +31,11 @@ Nunc vehicula velit nibh, ut facilisis magna blandit semper. Fusce varius odio i
 \section{Research Questions}\label{ch1:researchqs}
 
 
-
-Ut hendrerit risus egestas, sollicitudin mauris sit amet, fermentum ipsum. Donec vulputate enim in justo pellentesque rhoncus. Nunc a dui condimentum, egestas ipsum eu, fermentum enim. Duis condimentum iaculis luctus. Nam sodales pellentesque luctus. Aenean tristique ante mattis tellus tincidunt, vitae mattis nunc tristique. Ut nec mattis ante, eu sodales ex.
-
-Praesent pulvinar risus in diam mollis tincidunt. Nam aliquam lacus sed eleifend mattis. Ut at blandit ex, eget molestie massa. Morbi fermentum sit amet mauris ut placerat. Ut in eros pretium, congue felis sit amet, gravida justo. Suspendisse purus leo, posuere sed odio vel, mollis tempus nisi. Aenean est tortor, tincidunt et rhoncus ut, fermentum semper leo \cite{book-crossref}. Integer id viverra metus, a blandit neque. In in enim eu ipsum euismod hendrerit.
-
-Cras et pellentesque sapien. Maecenas vitae sollicitudin sapien. Sed elementum feugiat ligula, eu maximus nunc porttitor in. Etiam porttitor nisi ante, vel fermentum arcu pulvinar et. Sed bibendum diam nisl, vitae dapibus elit convallis congue. Ut vehicula lectus et enim consectetur cursus. Praesent non viverra augue, id bibendum risus. Maecenas lorem massa, dignissim ac purus in, tincidunt sodales nisi. Praesent condimentum tempus mauris. Etiam vitae sem maximus, auctor orci at, rhoncus diam. Donec pretium sodales sodales. Donec sodales ultrices metus ac pharetra. Mauris non ullamcorper urna. Mauris ac faucibus tortor, eu lobortis leo are described in detail in section~\ref{ch1:sec}.
-
 \section{Section sample 2}\label{ch1:sec}
 
-Phasellus sed elit vehicula, gravida odio in, vulputate quam. Quisque in elit enim. Vivamus finibus justo elit, sed semper turpis aliquam porttitor. Nulla posuere bibendum nunc sit amet consequat. Vivamus commodo lorem sed metus fermentum rhoncus. Etiam porta sodales purus, vel aliquet lacus facilisis et. Etiam ornare velit non dui auctor fermentum. In elit augue, fringilla at lacinia at, facilisis sit amet lectus. Sed et hendrerit ex. Morbi tristique felis a augue egestas commodo. Nulla porttitor ut urna nec dignissim. Fusce ac pharetra risus, id rhoncus ligula. Pellentesque euismod viverra sem, vel porttitor libero blandit quis. Phasellus orci augue, mattis nec dolor ut, cursus mattis quam. Sed tincidunt eu metus sed pulvinar. Ut a nulla at leo semper accumsan efficitur eget leo.
+%\footnote{Here is a sample footnote referencing figures~\ref{arm:fig1}
+%and~\ref{arm:fig2}.}  
 
-Sed vel lectus ut dui tempor molestie. Suspendisse blandit sapien posuere quam tempor lobortis. Duis sollicitudin tincidunt dui, at aliquam lorem dictum sit amet. Aenean congue nibh lectus, ut faucibus turpis facilisis quis. Ut aliquet magna at placerat ultricies. Mauris convallis, risus efficitur gravida dapibus, lacus lorem malesuada ligula, eget porta diam felis non turpis. Nulla sed sem finibus, vehicula quam at, vulputate tellus\footnote{Here is a sample footnote referencing figures~\ref{arm:fig1}
-and~\ref{arm:fig2}.}  
-
-Quisque elit enim, molestie ac metus ut, condimentum convallis nibh:
-
-\subsection{Subsection sample}
-
-In tempus ex nibh, non eleifend risus iaculis ac. Vestibulum ante ipsum primis in faucibus orci luctus et ultrices posuere cubilia Curae; Nullam in nisi eu arcu laoreet sollicitudin. Mauris consectetur venenatis arcu id finibus. Aenean pellentesque consectetur erat lacinia vulputate. Praesent tempus tempus lorem at dignissim. Proin at odio vitae tortor sollicitudin pretium. Quisque ac purus eu sem rutrum bibendum.
 
 % This is an example of how you would use tgrind to include an example
 % of source code; it is commented out in this template since the code
@@ -55,18 +44,13 @@ In tempus ex nibh, non eleifend risus iaculis ac. Vestibulum ante ipsum primis i
 %
 %\tagrind[htbp]{code/pmn.s.tex}{Code sample}{opt:pmn}
 
-Pellentesque ac leo eget lorem vulputate mattis eu a nisl. Duis elit erat, consectetur vulputate ullamcorper a, finibus quis turpis. Vivamus tincidunt dui id purus bibendum malesuada. Fusce accumsan, ipsum quis feugiat sodales, enim est aliquet leo, ut ornare justo mauris quis ex. Sed eros magna, suscipit et blandit non, pretium id felis. Praesent a vehicula tortor. Donec blandit dolor a ipsum sodales, eget aliquet nisl fermentum.
+%\subsection{Subsection with list}
+%\begin{enumerate}
+%  \item Item 1.
+%  \item Item 2.
+%  \item Item 3.
+%\end{enumerate}
 
-\subsection{Subsection with list}
-
-Ut sollicitudin, lectus eget posuere porttitor, risus dui facilisis risus, a pharetra lacus elit vel eros. Proin fermentum accumsan mauris, quis posuere nisi pharetra scelerisque. 
-\begin{enumerate}
-  \item Item 1.
-  \item Item 2.
-  \item Item 3.
-\end{enumerate}
-
-Cras nec ullamcorper mauris. Aliquam erat volutpat. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas. Suspendisse sed dui ac mi auctor scelerisque. Etiam at semper nisi. Cras nec dolor ac purus feugiat auctor. Nunc eget pulvinar massa.
 
 % This is an example of how you would use tgrind to include an example
 % of source code; it is commented out in this template since the code
@@ -75,36 +59,25 @@ Cras nec ullamcorper mauris. Aliquam erat volutpat. Pellentesque habitant morbi 
 %
 %\tgrind[htbp]{code/be.s.tex}{Block Exponent}{opt:be}
 
-\section{Section sample 3}
+%\subsection{Another subsection sample}
 
-Quisque sed ultrices leo. Donec vestibulum auctor nibh, at faucibus libero mollis in. Quisque massa lorem, feugiat a lectus in, lobortis volutpat lectus. Donec accumsan dui erat, eu tempor tortor facilisis sed. Nulla ullamcorper augue et sapien dapibus, quis bibendum velit porta. Nullam mattis vehicula tortor porttitor porta. Interdum et malesuada fames ac ante ipsum primis in faucibus. Praesent suscipit, lorem vel viverra rhoncus, turpis orci dignissim dui, bibendum pulvinar justo sem vel lorem. Nam porttitor mollis tristique. Aliquam rhoncus magna quis nisl varius mattis. Sed rhoncus, diam in gravida iaculis, mauris tellus imperdiet turpis, at porttitor est leo vel velit. Praesent faucibus ornare sodales. Sed eu lorem purus.  
-
-\subsection{Another subsection sample}
-
-Nullam rhoncus posuere lacus, id volutpat nisi pulvinar viverra. Quisque quis ultricies ante. Duis sollicitudin sapien nec consequat vehicula. Vestibulum convallis erat in arcu aliquam eleifend. Nunc scelerisque lorem non luctus sodales. Curabitur eleifend odio et sagittis semper. Praesent sodales, diam nec vulputate iaculis, neque leo consectetur nunc, a luctus lacus purus et dui. Sed sit amet tortor ullamcorper, malesuada libero quis, imperdiet tortor. Cras tempor blandit massa, sit amet molestie sapien tincidunt quis. Nullam hendrerit venenatis massa, sed lacinia ligula tincidunt vitae.
-
-Nam efficitur et lacus sed eleifend. Aenean quis ipsum eget leo ultrices ornare. Nullam rhoncus ante odio, at dignissim neque posuere eu. Pellentesque sodales tortor est, nec egestas sapien mollis quis. In lectus sapien, pellentesque congue erat consequat, hendrerit aliquet elit. Pellentesque eleifend purus ac diam bibendum, ac auctor ipsum posuere. Cras suscipit leo nec velit fermentum, id varius erat eleifend. Proin sagittis purus id ante lacinia, et congue eros tincidunt. Pellentesque at cursus tellus. Quisque id semper nunc. Quisque viverra a ex at ullamcorper. Morbi mollis erat at ex viverra fringilla. Proin ante dolor, dignissim sodales nisl ac, finibus egestas urna.
-
-Nulla porta urna at pulvinar consectetur. Pellentesque suscipit, neque vitae ultricies rutrum, eros tellus iaculis dui, nec pulvinar justo nibh eu urna. Ut euismod massa nisi, et bibendum risus placerat quis. Integer pretium nulla id risus lobortis laoreet. Aenean quis quam fringilla, elementum odio non, lacinia purus. Vestibulum dui sapien, mollis sit amet massa vel, egestas faucibus velit. Phasellus non justo ut ante vestibulum dictum. Nam in nibh et libero malesuada aliquet. Donec in ex in magna luctus volutpat.
-
-Sed quis dapibus libero. Curabitur id finibus nulla, sed semper felis. Proin dapibus nulla interdum, bibendum tortor et, blandit sapien. Etiam pretium tristique tortor non lacinia. Aliquam dapibus turpis lorem, sit amet porta ex dignissim vitae. In neque felis, sagittis sed ullamcorper lacinia, lobortis ut turpis. Nam quis aliquet justo. Nam eros mi, aliquam vel massa ac, ornare dignissim erat.  This is done by using some combination of
-\begin{eqnarray*}
-a_i & = & a_j + a_k \\
-a_i & = & 2a_j + a_k \\
-a_i & = & 4a_j + a_k \\
-a_i & = & 8a_j + a_k \\
-a_i & = & a_j - a_k \\
-a_i & = & a_j \ll m \mbox{shift}
-\end{eqnarray*}
-instead of the multiplication.  For example, you could use:
-\begin{eqnarray*}
-r & = & 4s + s\\
-r & = & r + r
-\end{eqnarray*}
-Or by xx:
-\begin{eqnarray*}
-t & = & 2s + s \\
-r & = & 2t + s \\
-r & = & 8r + t
-\end{eqnarray*}
-Cras pharetra ligula nec lectus bibendum, euismod mattis purus cursus. Nullam ut mi molestie purus ultricies lacinia. Phasellus sed orci ac lacus convallis vestibulum. Quisque id nulla ut ipsum finibus vehicula. Curabitur scelerisque erat lobortis, dapibus purus eget, faucibus sapien. Nam enim leo, faucibus id ante sed, fringilla luctus eros. Morbi vulputate, purus at commodo aliquet, turpis dolor sollicitudin libero, id vehicula risus dui sit amet nulla. Sed auctor efficitur urna. Praesent sagittis tellus ac velit vestibulum dignissim. Vivamus justo enim, pellentesque eu posuere id, mattis vitae felis. Aliquam id tincidunt diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+%This is done by using some combination of
+%\begin{eqnarray*}
+%a_i & = & a_j + a_k \\
+%a_i & = & 2a_j + a_k \\
+%a_i & = & 4a_j + a_k \\
+%a_i & = & 8a_j + a_k \\
+%a_i & = & a_j - a_k \\
+%a_i & = & a_j \ll m \mbox{shift}
+%\end{eqnarray*}
+%instead of the multiplication.  For example, you could use:
+%\begin{eqnarray*}
+%r & = & 4s + s\\
+%r & = & r + r
+%\end{eqnarray*}
+%Or by xx:
+%\begin{eqnarray*}
+%t & = & 2s + s \\
+%r & = & 2t + s \\
+%r & = & 8r + t
+%\end{eqnarray*}
