--- a/templates/acronyms.tex
+++ b/templates/acronyms.tex
@@ -1,3 +1,6 @@
 \newacronym{aeo}{AEO}{Annual Energy Outlook}
 \newacronym{eia}{EIA}{United States Energy Information Administration}
 \newacronym{ieo}{IEO}{International Energy Outlook}
+\newacronym{kwh}{kWh}{Kilowatt-Hour}
+\newacronym{lcoe}{LCOE}{Levelized Cost of Electricity}
+\newacronym{mwh}{MWh}{Megawatt-Hour}
