--- a/templates/chap1.tex
+++ b/templates/chap1.tex
@@ -9,14 +9,17 @@ The pursuit of energy has shaped the story of mankind from the very beginning. A
 
 This thesis examines how uncertainty characterization and risk mitigation can increase the role of one source, geothermal, in addressing the ever-growing energy needs in a viable way. This chapter reflects on the extent of those needs and the conditions that may uniquely support an increased focus on geothermal in the near-term. Opportunities and challenges associated with geothermal also lay the foundation for research questions motivating the remainder of this body of work.
 
-\section{Trends in Energy Usage}\label{ch1:trends}
-The \acrlong{eia} publishes annual forecasts on U.S. energy generation and consumption in the \acrlong{aeo} report. Based on the 2020 reference case, the \acrshort{aeo} model predicts a 50\% increase in U.S. energy consumption by 2050 (Figure \ref{fig:eia_2021_projections}) and decreasing electricity generation in all sectors except renewables \citep{us_energy_information_administration_annual_2021}. The \acrlong{ieo} shows similar increases in energy demand and renewables consumption, although more traditional sources of energy like coal, natural gas, petroleum, and nuclear also grow to meet the needs of India, China, and other rapidly developing nations \citep{us_energy_information_administration_international_2020}. A deeper look into the 2020 reference case shows solar and wind-based energy generation as the primary drivers in renewables, while geothermal contributions are relatively minor by comparison (Figure \ref{fig:eia_2021_projections}). 
+\section{Energy Trends}\label{ch1:trends}
+The \acrlong{eia} (\acrshort{eia}) publishes annual forecasts on U.S. energy generation and consumption in the \acrlong{aeo} report. Based on the 2020 reference case, the \acrshort{aeo} model predicts a 70\% increase in U.S. energy consumption by 2050 driven primarily by the industrial and power sectors \citep{us_energy_information_administration_annual_2021}. Electricity generation also grows by one third, driven primarily by renewables and natural gas as coal, nuclear, and oil see reductions (Figure \ref{fig:eia_2021_projections}). These predictions are offered with the caveat of much greater uncertainty due to the impact of the COVID-19 pandemic, although the \acrshort{eia} suggests a return to normal will occur by 2025 and broader, decadal trends will be unchanged \citep{us_energy_information_administration_annual_2021}. International forecasts show similar growth in consumption and production, but traditional sources of energy like coal and natural gas also increase in capacity to meet the needs of India, China, and other rapidly developing nations \citep{us_energy_information_administration_international_2020}. 
+ 
 \begin{figure}[htp]
 \centering
-\includegraphics[scale=0.45]{Figure001-EIA_projections}
-\caption[U.S. EIA projections based on the AEO2020 reference case]{U.S. EIA projections of (Left) U.S. electricity generation by sector and (Right) individual contributions by renewable type based on the AEO2020 reference case \protect\citep{us_energy_information_administration_annual_2021}}
+\includegraphics[scale=0.6]{Figure001-EIA_projections}
+\caption[U.S. EIA projections based on the AEO2021 reference case]{U.S. EIA projections of (Left) U.S. electricity generation by sector and (Right) individual contributions by renewable type based on the AEO2021 reference case \protect\citep{us_energy_information_administration_annual_2021}}
 \label{fig:eia_2021_projections}
 \end{figure}
+
+Lazard Asset Management breaks renewables down by \acrlong{lcoe} (\acrshort{lcoe}) in U.S. dollars/\acrshort{mwh}, where \acrshort{lcoe} is the estimated lifetime average net cost per unit energy of an electricity generating plant. In their 2020 analysis, intermittent energy sources like wind and utility-scale solar are already cost-competitive with fossil fuel-derived sources \citep{lazard_lazards_2020}. Geothermal, an “always on” source of power, ranges from \$59-\$101/\acrshort{mwh}  \acrshort{lcoe}, making it second-tier in cost competitiveness but comparable to community and rooftop solar installations \citep{lazard_lazards_2020}. Overall, the transition in energy sources away from fossil fuel dominance is in progress, and the demand for energy in support of population growth and country development will remain driver over the next 30 years.
 
 %section~\ref{ch1:sec}.
 
