completed through section 1.3

--- a/templates/acronyms.tex
+++ b/templates/acronyms.tex
@@ -1,6 +1,8 @@
 \newacronym{aeo}{AEO}{Annual Energy Outlook}
+\newacronym{ep}{E\&P}{Exploration and Production}
 \newacronym{eia}{EIA}{United States Energy Information Administration}
 \newacronym{ieo}{IEO}{International Energy Outlook}
 \newacronym{kwh}{kWh}{Kilowatt-Hour}
 \newacronym{lcoe}{LCOE}{Levelized Cost of Electricity}
 \newacronym{mwh}{MWh}{Megawatt-Hour}
+\newacronym{opec}{OPEC}{Organization of the Petroleum Exporting Countries}
