--- a/templates/chap2.tex
+++ b/templates/chap2.tex
@@ -7,3 +7,60 @@
 \chapter{Background}\label{ch2:background}
 
 Cras pharetra ligula nec lectus bibendum, euismod mattis purus cursus. Nullam ut mi molestie purus ultricies lacinia. Phasellus sed orci ac lacus convallis vestibulum. Quisque id nulla ut ipsum finibus vehicula. Curabitur scelerisque erat lobortis, dapibus purus eget, faucibus sapien. Nam enim leo, faucibus id ante sed, fringilla luctus eros. Morbi vulputate, purus at commodo aliquet, turpis dolor sollicitudin libero, id vehicula risus dui sit amet nulla. Sed auctor efficitur urna. Praesent sagittis tellus ac velit vestibulum dignissim. Vivamus justo enim, pellentesque eu posuere id, mattis vitae felis. Aliquam id tincidunt diam. Class aptent taciti sociosqu ad litora torquent per conubia nostra, per inceptos himenaeos. Pellentesque habitant morbi tristique senectus et netus et malesuada fames ac turpis egestas.
+
+
+
+\section{Section sample 2}\label{ch1:sec}
+
+
+
+%section~\ref{ch1:sec}.
+
+%\footnote{Here is a sample footnote referencing figures~\ref{arm:fig1}
+%and~\ref{arm:fig2}.}  
+
+
+% This is an example of how you would use tgrind to include an example
+% of source code; it is commented out in this template since the code
+% example file does not exist. To use it, you need to remove the '%' on the
+% beginning of the line, and insert your own information in the call.
+%
+%\tagrind[htbp]{code/pmn.s.tex}{Code sample}{opt:pmn}
+
+%\subsection{Subsection with list}
+%\begin{enumerate}
+%  \item Item 1.
+%  \item Item 2.
+%  \item Item 3.
+%\end{enumerate}
+
+
+% This is an example of how you would use tgrind to include an example
+% of source code; it is commented out in this template since the code
+% example file does not exist.  To use it, you need to remove the '%' on the
+% beginning of the line, and insert your own information in the call.
+%
+%\tgrind[htbp]{code/be.s.tex}{Block Exponent}{opt:be}
+
+%\subsection{Another subsection sample}
+
+%This is done by using some combination of
+%\begin{eqnarray*}
+%a_i & = & a_j + a_k \\
+%a_i & = & 2a_j + a_k \\
+%a_i & = & 4a_j + a_k \\
+%a_i & = & 8a_j + a_k \\
+%a_i & = & a_j - a_k \\
+%a_i & = & a_j \ll m \mbox{shift}
+%\end{eqnarray*}
+%instead of the multiplication.  For example, you could use:
+%\begin{eqnarray*}
+%r & = & 4s + s\\
+%r & = & r + r
+%\end{eqnarray*}
+%Or by xx:
+%\begin{eqnarray*}
+%t & = & 2s + s \\
+%r & = & 2t + s \\
+%r & = & 8r + t
+%\end{eqnarray*}
