finished through Section 1.5

--- a/templates/biblio.tex
+++ b/templates/biblio.tex
@@ -3,7 +3,7 @@
 %% this file to a `thebibliography' environment.  For more information 
 %% see section 4.3 of the LaTeX manual.
 \begin{singlespace}
-\bibliography{main}
+\bibliography{zotero}
 
 %% APA citation
 \bibliographystyle{apacite}
