--- a/templates/zotero.bib
+++ b/templates/zotero.bib
@@ -1,4 +1,111 @@
 
+@techreport{nrel_2020_2020,
+	title = {2020 {Annual} {Technology} {Baseline}},
+	url = {https://atb.nrel.gov/},
+	institution = {National Renewable Energy Laboratory},
+	author = {{NREL}},
+	year = {2020},
+	note = {ISSN: 20958099
+Publication Title: Annual Technology Baseline},
+}
+
+@techreport{jelacic_evaluation_2008,
+	address = {Washington, D.C.},
+	title = {An {Evaluation} of {Enhanced} {Geothermal} {Systems} {Technology}},
+	url = {https://www.osti.gov/biblio/1219317},
+	abstract = {This 2008 document presents the results of an eight-month study by the Department of Energy (DOE) and its support staff at the national laboratories concerning the technological requirements to commercialize a new geothermal technology, Enhanced Geothermal Systems (EGS).},
+	number = {1219317},
+	institution = {Office of Energy Efficiency and Renewable Energy (EERE},
+	author = {Jelacic, Allan and Fortuna, Raymond and LaSala, Raymond and Nathwani, Jay and Nix, Gerald and Visser, Charles and Green, Bruce and Renner, Joel and Blankenship, Douglas and Kennedy, Mack},
+	month = apr,
+	year = {2008},
+}
+
+@phdthesis{beckers_low-temperature_2016,
+	address = {Ithica, NY},
+	title = {Low-temperature geothermal energy: systems modeling, reservoir simulation, and economic analysis},
+	url = {https://ecommons.cornell.edu/handle/1813/44328},
+	school = {Cornell University},
+	author = {Beckers, Koenraad},
+	year = {2016},
+}
+
+@techreport{tester_economic_1990,
+	address = {Cambridge, Mass.},
+	title = {Economic predictions for heat mining : a review and analysis of hot dry rock ({HDR}) geothermal energy technology},
+	shorttitle = {Economic predictions for heat mining},
+	url = {https://dspace.mit.edu/handle/1721.1/60650},
+	abstract = {The main objectives of this study were first, to review and analyze several economic assessments of Hot Dry Rock (HDR) geothermal energy systems, and second, to reformulate an economic model for HDR with revised cost components.},
+	language = {en},
+	number = {MIT-EL 90-001},
+	urldate = {2021-02-26},
+	institution = {Massachusetts Institute of Technology. Energy Laboratory},
+	author = {Tester, Jefferson W. and Herzog, Howard J.},
+	year = {1990},
+	note = {Accepted: 2011-01-14T23:32:31Z
+Publisher: [Cambridge, Mass.] : Energy Laboratory, Massachusetts Institute of Technology, 1990},
+	keywords = {economics, geothermal},
+}
+
+@inproceedings{manente_hybrid_2011,
+	title = {Hybrid solar-geothermal power generation to increase the energy production from a binary geothermal plant},
+	volume = {54907},
+	isbn = {0-7918-5490-6},
+	author = {Manente, Giovanni and Field, Randall and DiPippo, Ronald and Tester, Jefferson W and Paci, Marco and Rossi, Nicola},
+	year = {2011},
+	pages = {109--119},
+}
+
+@inproceedings{augustine_comparison_2006,
+	title = {A comparison of geothermal with oil and gas well drilling costs},
+	publisher = {Curran Associates Inc New York, New York},
+	author = {Augustine, Chad and Tester, Jefferson W and Anderson, Brian and Petty, Susan and Livesay, Bill},
+	year = {2006},
+	pages = {5--19},
+}
+
+@inproceedings{tester_integrating_2015,
+	title = {Integrating geothermal energy use into re-building {American} infrastructure},
+	author = {Tester, Jeff and Reber, Tim and Beckers, Koenraad and Lukawski, Maciej and Camp, Erin and Aguirre, Gloria Andrea and Jordan, Terry and Horowitz, Frank},
+	year = {2015},
+}
+
+@inproceedings{hadi_resource_2010,
+	address = {Bali, Indonesia},
+	title = {Resource risk assessment in geothermal greenfield development; an economic implications},
+	booktitle = {Proceedings {World} {Geothermal} {Congress} 2010},
+	author = {Hadi, Julfi and Quinlivan, Paul and Ussher, Greg and Alamsyah, Ontowiryo and Pramono, Bambang and Masri, Asrizal},
+	year = {2010},
+}
+
+@article{fowler_solid_2005,
+	title = {The {Solid} {Earth}},
+	issn = {0521584094},
+	journal = {The Solid Earth},
+	author = {Fowler, CMR},
+	year = {2005},
+	pages = {500},
+}
+
+@article{hohmeyer_ipcc_2008,
+	title = {{IPCC} scoping meeting on renewable energy sources proceedings},
+	url = {https://www.ipcc.ch/publication/ipcc-scoping-meeting-on-renewable-energy-sources/},
+	journal = {IPCC},
+	author = {Hohmeyer, Olav},
+	year = {2008},
+}
+
+@misc{eere_pumped-storage_2021,
+	title = {Pumped-{Storage} {Hydropower}},
+	url = {https://www.energy.gov/eere/water/pumped-storage-hydropower},
+	abstract = {Pumped-storage hydropower (PSH) is a type of hydroelectric energy storage.},
+	language = {en},
+	urldate = {2021-05-27},
+	journal = {Energy.gov},
+	author = {{EERE}},
+	year = {2021},
+}
+
 @article{ipcc_global_2018,
 	title = {Global warming of 1.5°{C}},
 	volume = {1},
@@ -300,12 +407,6 @@ Publication Title: US EIA - Short-Term Energy Outlook},
 	year = {2021},
 }
 
-@article{beckers_low-temperature_2016,
-	title = {Low-temperature geothermal energy: systems modeling, reservoir simulation, and economic analysis},
-	author = {Beckers, Koenraad},
-	year = {2016},
-}
-
 @book{armstead_heat_1987,
 	title = {Heat mining: a new source of energy},
 	isbn = {0-419-12230-3},
@@ -335,16 +436,6 @@ Publication Title: US EIA - Short-Term Energy Outlook},
 	publisher = {MIT Press},
 	author = {de Neufville, Richard and Scholtes, Stefan},
 	year = {2011},
-}
-
-@techreport{nrel_national_renewable_energy_laboratory_2020_2020,
-	title = {2020 {Annual} {Technology} {Baseline}},
-	url = {https://atb.nrel.gov/},
-	institution = {National Renewable Energy Laboratory},
-	author = {{NREL (National Renewable Energy Laboratory)}},
-	year = {2020},
-	note = {ISSN: 20958099
-Publication Title: Annual Technology Baseline},
 }
 
 @techreport{freeman_system_2018,
@@ -1190,20 +1281,6 @@ SOCIAL:
 	author = {{U.S. Energy Information Administration}},
 	year = {2021},
 	keywords = {EIA data},
-}
-
-@article{tester_economic_1990,
-	title = {Economic predictions for heat mining : a review and analysis of hot dry rock ({HDR}) geothermal energy technology},
-	shorttitle = {Economic predictions for heat mining},
-	url = {https://dspace.mit.edu/handle/1721.1/60650},
-	abstract = {The main objectives of this study were first, to review and analyze several economic assessments of Hot Dry Rock (HDR) geothermal energy systems, and second, to reformulate an economic model for HDR with revised cost components.},
-	language = {en},
-	urldate = {2021-02-26},
-	author = {Tester, Jefferson W. and Herzog, Howard J.},
-	year = {1990},
-	note = {Accepted: 2011-01-14T23:32:31Z
-Publisher: [Cambridge, Mass.] : Energy Laboratory, Massachusetts Institute of Technology, 1990},
-	keywords = {economics, geothermal},
 }
 
 @book{unfccc_paris_2015,
@@ -2747,12 +2824,4 @@ Publisher: American Psychological Association},
 	title = {The {KTB} {Borehole}-{Germany}'s superdeep telescope into the {Earth}'s crust},
 	author = {Bram, Kurt and Draxler, Johann and Hirschmann, Gottfried and Zoth, Gustav and Hiron, Stephane and Kühr, Miel},
 	year = {1995},
-}
-
-@article{hohmeyer_ipcc_2008,
-	title = {Ipcc scoping meeting on renewable energy sources proceedings},
-	journal = {Group},
-	author = {Hohmeyer, Olav and Trittin, Tom},
-	year = {2008},
-	pages = {20 -- 25},
 }
