--- a/templates/acronyms.tex
+++ b/templates/acronyms.tex
@@ -1,8 +1,12 @@
 \newacronym{aeo}{AEO}{Annual Energy Outlook}
 \newacronym{ep}{E\&P}{Exploration and Production}
 \newacronym{eia}{EIA}{United States Energy Information Administration}
+\newacronym{ghg}{GHG}{Greenhouse Gas}
+\newacronym{gto}{GTO}{Geothermal Technologies Office}
 \newacronym{ieo}{IEO}{International Energy Outlook}
 \newacronym{kwh}{kWh}{Kilowatt-Hour}
 \newacronym{lcoe}{LCOE}{Levelized Cost of Electricity}
 \newacronym{mwh}{MWh}{Megawatt-Hour}
+\newacronym{nrel}{NREL}{National Renewable Energy Laboratory}
 \newacronym{opec}{OPEC}{Organization of the Petroleum Exporting Countries}
+\newacronym{usgs}{USGS}{United States Geological Survey}
